--- a/src/front-end/home-page/index.html
+++ b/src/front-end/home-page/index.html
@@ -74,6 +74,47 @@
 			</div>
 			<!--end-propagandas-->
 
+			<!--start-products-->
+			<div product-section-container class="product-section-container">
+
+				<template>
+					<div>
+						<div>
+							<h1 category></h1>
+						</div>
+						<div product-slider-container products-container>
+							<template>
+								<div class="product-container">
+									<div>
+										<div>
+											<button>
+												<i class="fa-solid fa-cart-shopping"></i>
+												Add to cart
+											</button>
+										</div>
+										<img product-image alt="Product Name">
+										<div>
+											<p product-name class="product-container__name"></p>
+											<div>
+												<p product-old-price class="product-container__old-price"></p>
+												<p product-price class="product-container__price"></p>
+											</div>
+											<p product-installment class="product-container__installment"></p>
+										</div>
+									</div>
+									<a target="_blank">
+										<i class="fa-brands fa-whatsapp"></i>
+										Order Product
+									</a>
+								</div>
+							</template>
+						</div>
+					</div>
+				</template>
+
+			</div>
+			<!--end-products-->
+
 		</main>
 		<!--end-main-->
 
