--- a/src/front-end/home-page/index.html
+++ b/src/front-end/home-page/index.html
@@ -3,33 +3,35 @@
 	<head>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width" />
-
-		<!--icon-->
 		<link rel="shortcut icon"/>
-
-		<!--title-->
 		<title></title>
-
-		<!--description-->
 		<meta name="description" />
-
-		<!--css-->
 		<link rel="stylesheet" href="home-page/styles/global/global.css" />
 		<link rel="stylesheet" href="home-page/styles/index/index.css" />
 		<link rel="stylesheet" href="home-page/styles/header/header.css" />
 		<link rel="stylesheet" href="home-page/styles/main/main.css">
 		<link rel="stylesheet" href="home-page/styles/footer/footer.css">
-
-		<!--font-awesome-->
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 	</head>
 	<body>
-		<!--start-header-->
 		<header>
 			<div>
 				<img store-logo alt="Store Logo">
 				<div class="search-container">
 					<input type="text" placeholder="What are you looking for?">
+					<div>
+						<div>
+							<template>
+								<button class="search-container__product">
+									<img product-image>
+									<div>
+										<p product-name></p>
+										<p product-price></p>
+									</div>
+								</button>
+							</template>
+						</div>
+					</div>
 				</div>
 				<div>
 					<button>
@@ -49,17 +51,10 @@
 				</div>
 			</div>
 		</header>
-		<!--end-header-->
-
-		<!--start-main-->
 		<main>
-			<!--start-loading-screen-->
 			<div loading-screen-container class="loading-screen-container">
 				<img store-logo alt="Store Logo">
 			</div>
-			<!--end-loading-screen-->
-
-			<!--start-propagandas-->
 			<div image-slider-container class="propagandas-container">
 				<button></button>
 				<div propagandas-container>
@@ -73,11 +68,7 @@
 				<button></button>
 				<p store-info></p>
 			</div>
-			<!--end-propagandas-->
-
-			<!--start-products-->
 			<div product-section-container class="product-section-container">
-
 				<template>
 					<div>
 						<div>
@@ -93,13 +84,11 @@
 												Add to cart
 											</button>
 										</div>
-										<img product-image alt="Product Name">
+										<img product-image>
 										<div>
 											<p product-name class="product-container__name"></p>
-											<div>
-												<p product-old-price class="product-container__old-price"></p>
-												<p product-price class="product-container__price"></p>
-											</div>
+											<p product-old-price class="product-container__old-price"></p>
+											<p product-price class="product-container__price"></p>
 											<p product-installment class="product-container__installment"></p>
 										</div>
 									</div>
@@ -112,14 +101,8 @@
 						</div>
 					</div>
 				</template>
-
 			</div>
-			<!--end-products-->
-
 		</main>
-		<!--end-main-->
-
-		<!--start-footer-->
 		<footer>
 			<div>
 				<svg xmlns="http://www.w3.org/2000/svg" height="0.611111in" viewBox="0 0 1600 55">
@@ -338,8 +321,6 @@
 				</div>
 			</div>
 		</footer>
-		<!--start-footer-->
-
 		<script src="home-page/scripts/globalModules.js"></script>
 		<script src="home-page/scripts/controller.js"></script>
 	</body>
