--- a/src/front-end/home-page/index.html
+++ b/src/front-end/home-page/index.html
@@ -3,27 +3,51 @@
 	<head>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width" />
-		<link rel="shortcut icon"/>
+		<link rel="shortcut icon" />
 		<title></title>
 		<meta name="description" />
 		<link rel="stylesheet" href="home-page/styles/global/global.css" />
 		<link rel="stylesheet" href="home-page/styles/index/index.css" />
+		<link rel="stylesheet" href="home-page/styles/aside/aside.css" />
 		<link rel="stylesheet" href="home-page/styles/header/header.css" />
-		<link rel="stylesheet" href="home-page/styles/main/main.css">
-		<link rel="stylesheet" href="home-page/styles/footer/footer.css">
+		<link rel="stylesheet" href="home-page/styles/main/main.css" />
+		<link rel="stylesheet" href="home-page/styles/footer/footer.css" />
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 	</head>
 	<body>
+		<aside categories-aside-menu>
+			<button close-categories-aside-menu-button></button>
+			<div>
+				<div>
+					<img store-logo>
+					<div>
+						<p>Categories</p>
+					</div>
+				</div>
+				<div>
+					<ul categories-list class="categories-list">
+						<template>
+							<li>
+								<button>
+									<i></i>
+									<i category-name></i>
+								</button>
+							</li>
+						</template>
+					</ul>
+				</div>
+			</div>
+		</aside>
 		<header>
 			<div>
-				<img store-logo alt="Store Logo">
-				<div class="search-container">
-					<input type="text" placeholder="What are you looking for?">
+				<img store-logo alt="Store Logo" />
+				<div search-container class="search-container">
+					<input type="text" placeholder="What are you looking for?" />
 					<div>
-						<div>
+						<div search-results>
 							<template>
-								<button class="search-container__product">
-									<img product-image>
+								<button>
+									<img product-image />
 									<div>
 										<p product-name></p>
 										<p product-price></p>
@@ -37,23 +61,36 @@
 					<button>
 						<i class="fa-solid fa-cart-shopping"></i>
 					</button>
-					<button>
+					<button open-categories-aside-menu-button>
 						<i class="fa-solid fa-bars"></i>
 					</button>
 				</div>
 			</div>
 			<div>
-				<button>
+				<button open-categories-aside-menu-button>
 					<i class="fa-solid fa-bars"></i>
 				</button>
-				<div class="search-container">
-					<input type="text" placeholder="What are you looking for?">
+				<div search-container class="search-container">
+					<input type="text" placeholder="What are you looking for?" />
+					<div>
+						<div search-results>
+							<template>
+								<button>
+									<img product-image />
+									<div>
+										<p product-name></p>
+										<p product-price></p>
+									</div>
+								</button>
+							</template>
+						</div>
+					</div>
 				</div>
 			</div>
 		</header>
 		<main>
 			<div loading-screen-container class="loading-screen-container">
-				<img store-logo alt="Store Logo">
+				<img store-logo alt="Store Logo" />
 			</div>
 			<div image-slider-container class="propagandas-container">
 				<button></button>
@@ -61,7 +98,7 @@
 					<template>
 						<picture>
 							<source big-image media="(min-width: 490px)" />
-							<img small-image alt="Propaganda"/>
+							<img small-image alt="Propaganda" />
 						</picture>
 					</template>
 				</div>
@@ -76,7 +113,7 @@
 						</div>
 						<div product-slider-container products-container>
 							<template>
-								<div class="product-container">
+								<div>
 									<div>
 										<div>
 											<button>
@@ -84,12 +121,12 @@
 												Add to cart
 											</button>
 										</div>
-										<img product-image>
+										<img product-image />
 										<div>
-											<p product-name class="product-container__name"></p>
-											<p product-old-price class="product-container__old-price"></p>
-											<p product-price class="product-container__price"></p>
-											<p product-installment class="product-container__installment"></p>
+											<p product-name></p>
+											<p product-old-price></p>
+											<p product-price></p>
+											<p product-installment></p>
 										</div>
 									</div>
 									<a product-link target="_blank">
@@ -293,7 +330,8 @@
 						M 1336.00,33.00
 						C 1336.00,33.00 1335.00,33.00 1335.00,33.00
 						1335.00,33.00 1336.00,34.00 1336.00,34.00
-						1336.00,34.00 1336.00,33.00 1336.00,33.00 Z"/>
+						1336.00,34.00 1336.00,33.00 1336.00,33.00 Z"
+					/>
 				</svg>
 			</div>
 			<div>
