--- a/src/front-end/admin-get-page/index.html
+++ b/src/front-end/admin-get-page/index.html
@@ -36,15 +36,15 @@
 							</span>
 							<div>
 								<div>
-									<div class="custom-input">
-										<input id="username" type="text" name="username" placeholder="username" />
-										<label for="username">username</label>
+									<div>
+										<input username id="username" type="text" name="username" placeholder="Username" />
+										<label for="username">Username</label>
 									</div>
 								</div>
 								<div>
-									<div class="custom-input">
-										<input id="password" type="password" name="password" placeholder="password" />
-										<label for="password">password</label>
+									<div>
+										<input password id="password" type="password" name="password" placeholder="Password" />
+										<label for="password">Password</label>
 									</div>
 								</div>
 								<button>
