--- a/src/front-end/root-get-page/index.html
+++ b/src/front-end/root-get-page/index.html
@@ -79,7 +79,7 @@
 					<ul categories-list class="categories-list">
 						<template>
 							<li>
-								<button>
+								<button close-categories-aside-menu-button>
 									<i></i>
 									<i category-name></i>
 								</button>
